# DlightRAG

./: .dockerignore  .env.example  .env.mineru.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  config.yaml  docker-compose.e2e.yml  docker-compose.yml  prerequisite_setup.py  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci-e2e.yml  ci.yml  codeql.yml  postgres-image.yml  publish.yml
docs/: .$architecture.drawio.bkp  PG.md  architecture.drawio  architecture.md  architecture.mmd  config-reference.md  configuration.md  database-role-architecture.md  evaluation.md  interfaces.md  module-layers.md  operations.md  postgresql.md  ragas-evaluation.md  response-schema.md  retrieval-answer.md  retrieval_answer_mechanism.md  security.md  web-theme-design.md  web-theme-implementation-plan.md
docs/designs/: 2026-07-03-documentation-ia-design.md
docs/plans/: 2026-03-04-cross-workspace-federation-design.md  2026-03-04-cross-workspace-federation-plan.md  2026-03-05-backend-agnostic-reset-design.md  2026-03-05-drop-langchain-design.md  2026-03-05-drop-langchain-plan.md  2026-03-05-eliminate-sources-design.md  2026-03-05-eliminate-sources-plan.md
docs/superpowers/plans/: 2026-03-11-adaptive-excel-page-width.md  2026-03-11-multimodal-query-multi-workspace.md  2026-03-12-raw-elimination-sources-panel.md  2026-03-12-rich-content-rendering.md  2026-03-14-answer-layer-architecture.md  2026-03-15-areset-implementation.md  2026-03-15-provider-optimization.md  2026-03-15-streaming-answer-robustness.md  2026-03-23-api-webgui-redesign.md  2026-03-24-artrag-parity-improvements.md  2026-05-24-lightrag-main-sidecar-unified-plan.md  2026-06-14-fastmcp-tool-registry-migration.md  2026-07-12-durable-source-download-invariant.md
docs/superpowers/specs/: 2026-03-11-adaptive-excel-page-width-design.md  2026-03-12-raw-elimination-sources-panel-design.md  2026-03-12-rich-content-rendering-design.md  2026-03-14-answer-layer-architecture-design.md  2026-03-15-areset-architecture-design.md  2026-03-15-provider-optimization-design.md  2026-03-15-streaming-answer-robustness-design.md  2026-03-16-retrieval-content-pipeline-design.md  2026-03-23-api-webgui-redesign.md  2026-03-24-artrag-parity-improvements.md  2026-05-24-lightrag-main-sidecar-unified-design.md  2026-05-31-prompt-profile-design.md  2026-06-14-fastmcp-tool-registry-design.md  2026-07-12-chat-sidebar-conversation-ux-design.md  2026-07-12-durable-scoped-multimodal-conversations-design.md  2026-07-12-durable-source-download-invariant-design.md
frontend/: .stylelintignore  .stylelintrc.json  package-lock.json  package.json  tsconfig.json  types.d.ts  vite.config.ts
frontend/api/: conversations.ts
frontend/events/: bus.ts  workspace_events.ts
frontend/lib/: chat_renderer.ts  document_chip.ts  errors.ts  listbox.ts  popover.ts  safe_html.ts  sse.ts  theme.test.ts  theme.ts
frontend/stores/: attachmentPolicy.test.ts  base.ts  conversationStore.test.ts  conversationStore.ts  errors.test.ts  imagePolicy.test.ts  ingestStore.ts  pendingSubmissionStore.test.ts  pendingSubmissionStore.ts  sessionStore.ts  state.ts  workspaceStore.ts
frontend/styles/: chat.module.css  conversations.module.css  files.css  global.css  layout.css  lightbox.module.css  sources.css  workspaces.module.css
frontend/styles/shared/: hover.css  interactive.css  typography.css
frontend/tokens/: utopia.css
frontend/ui/: attachment_policy.ts  attachments.ts  chat.ts  clearHistory.ts  conversations.ts  files-panel.ts  folder-upload.ts  htmx.ts  image_policy.ts  images.ts  main.ts  mathjax.ts  mermaid.ts  panel.ts  resize.ts  source-panel.ts  theme.ts  toast.ts  workspaces.ts
postgres/: Dockerfile  init.sql
prompts/entity_type/: domain-entities.yaml
scripts/: backfill_metadata.py  cli.py  generate_pygments_css.py  install_mineru_service.sh  langfuse_headless.py  langfuse_stack.py  mineru_env.sh  mineru_launch_agent.sh  ragas_eval.py  reset.py  start_mineru_api.sh
scripts/ci/: check-architecture.py
scripts/langfuse/: headless.py  stack.py
scripts/mineru/: _write_mineru_json.py  api.sh  env.sh  gradio.sh  install.sh  launch_agent.sh  service.sh  sitecustomize.py  systemd_service.sh  title_aided.sh
scripts/postgres/: replica-entrypoint.sh  replica-env.sh  replica-reset.sh  replica-smoke.sh  replication-role.sh
src/dlightrag/: __init__.py  access_control.py  app_state.py  config.py  observability.py  pool.py  service.py
src/dlightrag/api/: auth.py  events.py  file_routes.py  middleware.py  models.py  routes.py  server.py
tests/: conftest.py  test_multimodal_query.py  test_routes_multimodal.py  test_visual_retriever_multimodal.py
tests/e2e/: __init__.py  conftest.py  pg18_harness.py  test_chat_flow.py  test_file_ingestion.py  test_pg18_lightrag_smoke.py  test_source_panel.py  test_web_conversations.py  test_web_theme.py  test_workspace_crud.py
tests/integration/: test_pg_storage.py  test_service_composition.py  test_unified_engine.py  test_web_conversation_attachments_pg.py
tests/unit/: conftest.py  test_access_control.py  test_adapter.py  test_answer_capability.py  test_answer_context.py  test_answer_engine.py  test_answer_events.py  test_answer_excerpt_blocks.py  test_answer_images.py  test_answer_media.py  test_answer_prompt.py  test_answer_prompt_assembler.py  test_answer_stream_lifecycle.py  test_api_server.py  test_azure_sas.py  test_bm25.py  test_bm25_language.py  test_bounded_gather.py  test_checkpoint.py  test_chunk_mapping.py  test_chunk_provenance.py  test_chunking.py  test_cleanup.py  test_cli.py  test_client_payloads.py  test_client_requests.py  test_completion.py  test_composer_analysis.py  test_composer_evidence.py  test_composer_lexical.py  test_config.py  test_config_yaml.py  test_default_model_roles.py  test_dependency_constraints.py  test_direct_image_ingest.py  test_docling_postprocess.py  test_document_artifacts.py  test_document_embedding.py  test_download_locator.py  test_embed_providers.py  (+124 more)
(+336 files in other folders)
