# Copyright 2025-2026 Hanlian Lu. SPDX-License-Identifier: Apache-2.0

[project]
name = "dlightrag"
version = "1.3.0"
description = "Multimodal RAG with knowledge graph and contextual intelligence"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
maintainers = [{ name = "HanlianLyu" }, { name = "hllyu" }]
dependencies = [
    # Core RAG
    "lightrag-hku>=1.4.11",
    "raganything[all]>=1.2.10",
    # LLM
    "openai>=2.29.0",
    "anthropic>=0.42.0",
    "google-genai>=1.14.0",
    # PostgreSQL
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
    # Config
    "pydantic>=2.11.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0",
    # Utils
    "httpx>=0.28.0",
    "numpy>=2.4.2",
    # Data sourcing
    "azure-storage-blob>=12.28.0",
    "aiobotocore>=2.13.0",
    # Document parsing
    "docling>=2.80.0",
    "pypdfium2>=4.30.0",
    "openpyxl>=3.1",
    # MCP server
    "mcp[cli]>=1.9.0",
    # REST API server
    "PyJWT>=2.8.0",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "python-multipart>=0.0.22",
    # Web frontend
    "jinja2>=3.1",
    "markdown-it-py[plugins]>=3.0",
    "nh3>=0.2",
    "pygments>=2.17",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/hanlianlu/dlightrag"
Repository = "https://github.com/hanlianlu/dlightrag"
Issues = "https://github.com/hanlianlu/dlightrag/issues"

[project.scripts]
dlightrag-mcp = "dlightrag.mcp.server:main"
dlightrag-api = "dlightrag.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dlightrag"]

[tool.uv]
constraint-dependencies = ["onnxruntime<1.24"]

[tool.uv.sources]
raganything = { git = "https://github.com/HKUDS/RAG-Anything.git", rev = "main" }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/node_modules", "**/.*", ".venv"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportIncompatibleMethodOverride = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=dlightrag --cov-report=term-missing"
markers = ["integration: requires running PostgreSQL"]
