# Copyright 2025-2026 Hanlian Lu. SPDX-License-Identifier: Apache-2.0

[project]
name = "dlightrag"
version = "1.7.10"
description = "Multimodal RAG with knowledge graph and contextual intelligence"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = "Apache-2.0"
maintainers = [{ name = "HanlianLyu" }, { name = "hllyu" }]
dependencies = [
    # Core RAG
    "lightrag-hku>=1.5.4",
    # LLM
    "openai>=2.46.0",
    "anthropic>=0.117.1",
    "google-genai>=2.13.0",
    # PostgreSQL
    "asyncpg>=0.31.0",
    "pgvector>=0.5.0",
    # Config
    "pydantic>=2.11.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0",
    # Utils
    "httpx>=0.28.0",
    "pillow>=12.3.0",
    "lingua-language-detector>=2.2.0",
    # Request-local lexical retrieval for Web Composer document attachments.
    "bm25s>=0.3.9",
    # JSON repair for LLM output
    "json-repair>=0.61.7",
    # LightRAG paragraph_semantic chunker fallback
    "langchain-text-splitters",
    # LightRAG GUI (graph browsing via lightrag-server)
    # Runtime deps for lightrag-server when lightrag-hku is installed without the api extra.
    "bcrypt",
    "aiofiles",
    # Data sourcing
    "azure-storage-blob>=12.28.0",
    "aiobotocore>=3.8.0",
    # MCP server
    "mcp[cli]>=1.9.0",
    # REST API server
    "PyJWT>=2.8.0",
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "python-multipart>=0.0.22",
    # Web frontend
    "jinja2>=3.1",
    "markdown-it-py[plugins]>=3.0",
    "nh3>=0.2",
    "pygments>=2.17",
    # Observability
    "langfuse>=4.14.1",
    # Native docx parsing: lightrag's docx parser imports python-docx + defusedxml.
    "python-docx>=1.2.0",
    "defusedxml>=0.7.1",
]

[dependency-groups]
dev = [
    "import-linter>=2.11",
    "pre-commit>=4.6.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-playwright>=0.8.0",
    "questionary>=2",
    "rich>=13",
    "ruamel.yaml>=0.18",
    "ruff>=0.15.0",
    "shellcheck-py>=0.10",
]

[project.urls]
Homepage = "https://github.com/hanlianlu/dlightrag"
Repository = "https://github.com/hanlianlu/dlightrag"
Issues = "https://github.com/hanlianlu/dlightrag/issues"

[project.scripts]
dlightrag-mcp = "dlightrag.mcp.server:main"
dlightrag-api = "dlightrag.api.server:main"
dlightrag-rebuild-vdb = "dlightrag.tools.rebuild_vdb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dlightrag"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
constraint-dependencies = ["onnxruntime<1.24"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: Playwright-driven end-to-end UI tests",
    "integration: requires running PostgreSQL",
    "e2e_pg18: opt-in PostgreSQL 18 + LightRAG smoke tests",
]

[tool.importlinter]
root_package = "dlightrag"

[[tool.importlinter.contracts]]
id = "no-transport-internals"
name = "Internal packages must not import from transport layers"
type = "forbidden"
source_modules = [
    "dlightrag.config",
    "dlightrag.utils",
    "dlightrag.prompts",
    "dlightrag.citations",
    "dlightrag.models",
    "dlightrag.core",
    "dlightrag.storage",
    "dlightrag.sourcing",
    "dlightrag.observability",
]
forbidden_modules = [
    "dlightrag.web",
    "dlightrag.api",
    "dlightrag.mcp",
]

[[tool.importlinter.contracts]]
id = "no-circular-foundation"
name = "Foundation packages must not import from domain"
type = "forbidden"
source_modules = [
    "dlightrag.config",
    "dlightrag.utils",
    "dlightrag.prompts",
]
forbidden_modules = [
    "dlightrag.core",
    "dlightrag.storage",
    "dlightrag.sourcing",
    "dlightrag.observability",
    "dlightrag.models",
    "dlightrag.citations",
]

[[tool.importlinter.contracts]]
id = "foundation-layers"
name = "Foundation packages follow the documented layering"
type = "layers"
layers = [
    "dlightrag.models",
    "dlightrag.config",
    "dlightrag.observability",
    "dlightrag.prompts | dlightrag.utils",
]

[[tool.importlinter.contracts]]
id = "core-coordination-layers"
name = "Core coordination stack is layered"
type = "layers"
containers = ["dlightrag.core"]
layers = [
    "servicemanager",
    "service",
    "reset",
]
